src/objects/FleetEnrollment__c.object
<CustomObject>
    <fields>
        <fullName>App_Approval_Date__c</fullName>
        <formula>Application_Request__r.App_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Request</label>
        <referenceTo>Application_Request__c</referenceTo>
        <relationshipLabel>Fleet Enrollments</relationshipLabel>
        <relationshipName>Fleet_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>Application_Request__r.Sales_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Association</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <defaultValue>(&quot;Program Default&quot;)</defaultValue>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program Default</fullName>
                    <default>true</default>
                    <label>Program Default</label>
                </value>
                <value>
                    <fullName>Cycle 3</fullName>
                </value>
                <value>
                    <fullName>Cycle 4</fullName>
                </value>
                <value>
                    <fullName>Cycle 1</fullName>
                </value>
                <value>
                    <fullName>Cycle 2</fullName>
                </value>
                <value>
                    <fullName>Cycle 6</fullName>
                </value>
                <value>
                    <fullName>Cycle 14</fullName>
                </value>
                <value>
                    <fullName>Cycle 16</fullName>
                </value>
                <value>
                    <fullName>Cycle 17</fullName>
                </value>
                <value>
                    <fullName>Cycle 18</fullName>
                </value>
                <value>
                    <fullName>Cycle 01</fullName>
                </value>
                <value>
                    <fullName>Cycle 8</fullName>
                </value>
                <value>
                    <fullName>Cycle 10</fullName>
                </value>
                <value>
                    <fullName>Cycle 11</fullName>
                </value>
                <value>
                    <fullName>Cycle 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Full_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Data_Entry_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Data Entry Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Duration__c</fullName>
        <label>Card Replacement Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Fee_Waive_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Replacement Fee Waive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Attention__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attention</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Bill_To__c</fullName>
        <label>Card Shipping Bill To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Card_Shipping__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>WEX</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Option_GL_Code__c</fullName>
        <formula>IF(TEXT(Card_Shipping__c) == &quot;Overnight&quot;, &quot;8150&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Shipping Option GL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping__c</fullName>
        <label>Card Shipping Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>2nd Day</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name_Lookup__c</fullName>
        <formula>Embossing_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date the application was marked completed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <displayFormat>FE-{000000}</displayFormat>
        <label>Confirmation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Credit_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Amount__c</fullName>
        <label>Credit Line Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Carrier_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Carrier Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Application_Parameter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Debug Application Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Opportunity_Parameter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Debug Opportunity Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_ID_Random__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver ID Random</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Version__c</fullName>
        <description>For Jim Barton to track versions of e-mails the enrollment was sourced from.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embossing_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Embossing Company Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embossing_Second_Line__c</fullName>
        <label>Embossing Second Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Vehicle Description</fullName>
                </value>
                <value>
                    <fullName>License Plate</fullName>
                </value>
                <value>
                    <fullName>Vehicle Company Id</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finders_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Finders Fee entered from Sales Checklist. Should not be editable once it&apos;s been entered.</description>
        <inlineHelpText>Finders Fee entered from Sales Checklist. Should not be editable once it&apos;s been entered.</inlineHelpText>
        <label>Finders Fee</label>
        <referenceTo>Finders_Fee__c</referenceTo>
        <relationshipLabel>Fleet Enrollments</relationshipLabel>
        <relationshipName>Fleet_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friendly_Billing_Cycle__c</fullName>
        <formula>ROUND(VALUE(RIGHT(TEXT(Billing_Cycle__c),(LEN(TEXT(Billing_Cycle__c))-FIND(&quot; &quot;, TEXT(Billing_Cycle__c))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Friendly Billing Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchy Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Duration__c</fullName>
        <formula>MAX ( 0, 
( Completed_Date__c - Submitted_Date__c+ CASE ( MOD (Completed_Date__c- DATE( 1900,1,6 ),7),0,1,1,1,0 ) ) - 
( ( FLOOR ( ( ( Completed_Date__c- Submitted_Date__c ) / 7 ) ) * 2 ) + 
CASE ( 
MOD ( Submitted_Date__c - DATE( 1900,1,6 ),7), 
0,CASE( MOD ( Completed_Date__c - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ( Completed_Date__c - DATE( 1900,1,6 ),7),0,2,1 ), 
IF ( MOD ( Submitted_Date__c - DATE( 1900,1,6 ),7) - MOD ( Completed_Date__c - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF ( MOD ( Completed_Date__c - DATE( 1900,1,6 ),7) = 0,1,2 ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Accounting_Fee_Waive_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Accounting Fee Waive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Accounting_Fee__c</fullName>
        <label>Monthly Accounting Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Activity_Fee__c</fullName>
        <label>Monthly Activity Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Card_Charges_Waive_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Card Charges Waive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Card_Charges__c</fullName>
        <label>Monthly Card Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Drivers__c</fullName>
        <label>Number Of Drivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Vehicles__c</fullName>
        <label>Number Of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fleet Enrollments</relationshipLabel>
        <relationshipName>Fleet_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paper_Fee__c</fullName>
        <label>Paper Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <formula>Application_Request__r.Opportunity__r.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Print Token</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Template_Account_ID__c</fullName>
        <formula>Program_Template_Account__r.Template_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Template Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Template_Account_Name__c</fullName>
        <formula>Program_Template_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Template Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Template_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Template Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program_Template_Account__c.Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Program_Template_Account__c</referenceTo>
        <relationshipLabel>Fleet Enrollments</relationshipLabel>
        <relationshipName>Fleet_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Fleet Enrollments</relationshipLabel>
        <relationshipName>Fleet_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Driver_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Driver Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_LicensePlt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Your monthly reporting can identify the license plate number assigned to the card. If license plate number is printed on your card, it is automatically added to your reporting.</inlineHelpText>
        <label>Report License Plate On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_VIN_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report VIN Number On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_VehicleDesc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows you to identify your vehicles on reports by vehicle description (i.e., make/model). If the vehicle description is printed on your card, it is automatically added to your reporting.</inlineHelpText>
        <label>Report Vehicle Description On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_VehicleId__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you company has existing IDs assigned to vehicles (i.e., Unit 1), you can provide these so your reports will match to your IDs.  If Vehicle ID# is printed on your cards, it is automatically added to reporting.</inlineHelpText>
        <label>Report Company Vehicle Id On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows you to see a summary by department (i.e. Sales, Service) on your invoice.</inlineHelpText>
        <label>Report Department On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Application_Request__r.Sales_Person__r.FirstName &amp; &quot; &quot; &amp; Application_Request__r.Sales_Person__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Shipping Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Shipping Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Attention__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Shipping Attention</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Shipping Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Station Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Ready For Siebel</fullName>
                </value>
                <value>
                    <fullName>Pending Ready For Siebel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Fleet_Data_Form_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true after a sales rep uses the &quot;Submit Fleet Data&quot; button on the opportunity.
This is used to determine where we route implementation cases.</description>
        <label>Submit Fleet Data Form Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1:M</fullName>
                </value>
                <value>
                    <fullName>1:1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WEX_Account_Nbr__c</fullName>
        <formula>Application_Request__r.WEX_Account_Nbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Acct__c</fullName>
        <formula>Application_Request__r.WEX_Account_Nbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Acct #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Platform__c</fullName>
        <formula>TEXT(Program__r.WEX_Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Platform</label>
        <type>Text</type>
    </fields>
    <label>Fleet Enrollment</label>
    <listViews>
        <fullName>All_Fleet_Enrollments</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Credit_Approved__c</columns>
        <columns>Program__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>Billing_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/14/2017 12:00 AM</value>
        </filters>
        <label>All Fleet Enrollments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Fleet_Enrollments</fullName>
        <columns>NAME</columns>
        <columns>Email_Version__c</columns>
        <columns>Status__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Program__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Billing_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/14/2017 12:00 AM</value>
        </filters>
        <label>Completed Fleet Enrollments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Credit_approved_Fleet_Enrollments</fullName>
        <columns>Application_Status__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Status__c</columns>
        <columns>App_Approval_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Number_Of_Vehicles__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Email_Version__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>06 - Approved,10 - Re-review Approved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <label>Credit approved Fleet Enrollments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Credit_approved_Fleet_Enrollments_2</fullName>
        <columns>Application_Status__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Number_Of_Vehicles__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Email_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>06 - Approved,10 - Re-review Approved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <label>Credit approved Fleet Enrollments 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Declined_Fleet_Enrollments</fullName>
        <columns>Application_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Email_Version__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>Billing_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/14/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>07 - Declined</value>
        </filters>
        <label>Declined Fleet Enrollments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fleet_Enrollment_PTA</fullName>
        <booleanFilter>1 and (2 or 3)</booleanFilter>
        <columns>Application_Status__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>NAME</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Number_Of_Vehicles__c</columns>
        <columns>Email_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Email_Version__c</field>
            <operation>contains</operation>
            <value>PTA</value>
        </filters>
        <filters>
            <field>Email_Version__c</field>
            <operation>contains</operation>
            <value>BOCA</value>
        </filters>
        <label>Fleet Enrollment PTA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress_apps_Fleet_Enrollments</fullName>
        <columns>Application_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Email_Version__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>Billing_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/14/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>05 - Application Sent</value>
        </filters>
        <label>In Progress apps Fleet Enrollments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Fleet_Enrollments</fullName>
        <columns>Application_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Email_Version__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Company_Name_Lookup__c</columns>
        <columns>Billing_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/14/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>05 - Application Sent</value>
        </filters>
        <label>New Fleet Enrollments 2</label>
        <language>en_US</language>
    </listViews>
</CustomObject>